added details of pixshoot portfolio section

--- a/pfdetail-pixshoot.html
+++ b/pfdetail-pixshoot.html
@@ -33,70 +33,79 @@
 
   <main id="main">
 
-    <!-- ======= Portfolio Details ======= -->
-    <div id="portfolio-details" class="portfolio-details">
-      <div class="container">
+<!-- ======= Portfolio Details ======= -->
+<div id="portfolio-details" class="portfolio-details">
+  <div class="container">
 
-        <div class="row">
+    <div class="row">
 
-          <div class="col-lg-8">
-            <h2 class="portfolio-title">Pixshoot: Perfectly Frame Your Moments, Every Time</h2>
+      <div class="col-lg-8">
+        <h2 class="portfolio-title">Pixshoot: Perfectly Frame Your Moments, Every Time</h2>
 
-            <div class="portfolio-details-slider swiper">
-              <div class="swiper-wrapper align-items-center">
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/pf-pixshoot.png" alt="">
-                </div>
-
-              </div>
-              <div class="swiper-pagination"></div>
+        <!-- Gambar pertama (Sudah ada dalam slider) -->
+        <div class="portfolio-details-slider swiper">
+          <div class="swiper-wrapper align-items-center">
+            <div class="swiper-slide">
+              <img src="assets/img/portfolio/pf-pixshoot.png" alt="" style="margin-bottom: 20px;">
             </div>
-
           </div>
+          <!-- <div class="swiper-pagination"></div> -->
+        </div>
 
-          <div class="col-lg-4 portfolio-info">
-            <h3>Project Information</h3>
-            <ul>
-              <li><strong>Platform</strong>: iOS</li>
-              <li><strong>Project Date</strong>: November, 2024</li>
-              <li><strong>Project URL</strong>:<a href="https://apps.apple.com/id/app/pixshoot/id6737460616"> App Store </a></li>
-            </ul>
-            <h4>Project Overview</h4>
-            <p>Pixshoot is a travel photography app designed for solo travelers to get the perfect shot when asking someone to take their picture. With features like Angle Lock and Burst Mode, the app ensures the user captures the best shot with ease, even when others help them.</p>
+        <!-- Gambar kedua (pf-pixshoot1.png) ditambahkan di bawah gambar pertama -->
+        <div>
+          <img src="assets/img/portfolio/pf-pixshoot1.png" alt="" style="margin-bottom: 20px;">
+        </div>
 
-            <h4>Key Features</h4>
-            <ul>
-              <li><strong>Angle Lock:</strong> Uses AR technology, gyroscope, and AR anchors with overlays to lock the phone’s orientation. This ensures photos remain level and aligned, even if the phone is tilted.</li>
-              <li><strong>Burst Mode:</strong> Captures a series of photos at three different zoom levels (x1, x2, 0.5x) with a single tap. This feature helps users select the best shot from multiple perspectives.</li>
-              <li><strong>Live Preview & Haptic Feedback:</strong> Displays the camera feed directly on the Apple Watch for easy previewing, and provides haptic feedback to notify users when a photo is taken, keeping them aware without needing to look at the screen.</li>
-            </ul>
-
-            <h4>My Role on This Project:</h4>
-            <h5>As iOS Developer:</h5>
-            <ul>
-              <li>Developed core features including Angle Lock, utilizing ARKit and AVFoundation to enable smooth switching between these frameworks for enhanced camera functionality.</li>
-              <li>Collaborated with a team of 4 developers, ensuring all project goals were aligned and the system design was cohesive across all development phases.</li>
-              <li>Reviewed and merged pull requests from other developers on GitHub, maintaining clean code and ensuring the project followed version control best practices.</li>
-            </ul>
-
-            <h5>As Researcher:</h5>
-            <ul>
-              <li>Designed and conducted user research by creating interview questions for travelers, performing user interviews, and analyzing results to develop user personas, customer journey maps, and actionable solution concepts.</li>
-              <li>Performed feasibility studies of Apple’s native frameworks, evaluating their compatibility with Pixshoot’s features and identifying the most viable technologies for integration.</li>
-              <li>Led 3 rounds of usability testing with over 25 participants, achieving a 9.5/10 satisfaction score, ensuring the final product met user needs and delivered an intuitive experience.</li>
-            </ul>
-
-            <h4>Reflections</h4>
-            <p>Working on Pixshoot was a rewarding experience, marking my second project using AVFoundation for camera handling (after Toolis). By leveraging ARKit, AVFoundation, and WatchKit, I created a seamless travel photography app. Overcoming technical challenges and refining the app based on user feedback showed how Apple's frameworks can elevate everyday tasks. This project reinforced my belief that well-integrated technology can transform simple ideas into meaningful user experiences.</p>
-
-          </div>
-
+        <!-- Gambar ketiga (pf-pixshoot2.png) ditambahkan di bawah gambar kedua -->
+        <div>
+          <img src="assets/img/portfolio/pf-pixshoot2.png" alt="" style="margin-bottom: 20px;">
         </div>
 
       </div>
-    </div><!-- End Portfolio Details -->
 
+      <div class="col-lg-4 portfolio-info">
+        <h3>Project Information</h3>
+        <ul>
+          <li><strong>Platform</strong>: iOS</li>
+          <li><strong>Project Date</strong>: November, 2024</li>
+          <li><strong>Project URL</strong>:<a href="https://apps.apple.com/id/app/pixshoot/id6737460616"> App Store </a></li>
+        </ul>
+        <h4>Project Overview</h4>
+        <p>Pixshoot is a travel photography app designed for solo travelers to get the perfect shot when asking someone to take their picture. With features like Angle Lock and Burst Mode, the app ensures the user captures the best shot with ease, even when others help them.</p>
+
+        <h4>Features</h4>
+        <ul>
+          <li><strong>1.  Angle Lock:</strong> Uses AR technology, gyroscope, and AR anchors with overlays to lock the phone’s orientation. This ensures photos remain level and aligned, even if the phone is tilted.</li>
+          <li><strong>2. Burst Mode:</strong> Captures a series of photos at three different zoom levels (x1, x2, 0.5x) with a single tap. This feature helps users select the best shot from multiple perspectives.</li>
+          <li><strong>3. Live Preview & Haptic Feedback:</strong> Displays the camera feed directly on the Apple Watch for easy previewing, and provides haptic feedback to notify users when a photo is taken, keeping them aware without needing to look at the screen.</li>
+        </ul>
+
+        <h4>My Role on This Project:</h4>
+        <h5>As iOS Developer:</h5>
+        <ul>
+          <li>- Developed core features of Angle Lock, utilizing ARKit and AVFoundation to enable smooth switching between these frameworks for enhanced camera functionality.</li>
+          <li>- Collaborated with a team of 4 developers, ensuring all project goals were aligned and the system design was cohesive across all development phases.</li>
+          <li>- Reviewed and merged pull requests from other developers on GitHub, maintaining clean code and ensuring the project followed version control best practices.</li>
+        </ul>
+
+        <h5>As Researcher:</h5>
+        <ul>
+          <li>- Designed and conducted user research by creating interview questions for travelers, performing user interviews, and analyzing results to develop user personas, customer journey maps, and actionable solution concepts.</li>
+          <li>- Performed feasibility studies of Apple’s native frameworks, evaluating their compatibility with Pixshoot’s features and identifying the most viable technologies for integration.</li>
+          <li>- Led 3 rounds of usability testing with over 25 participants, achieving a 9.5/10 satisfaction score, ensuring the final product met user needs and delivered an intuitive experience.</li>
+        </ul>
+
+        <h4>Reflections</h4>
+        <ul>
+          <li>Working on Pixshoot was a rewarding experience, marking my second project using AVFoundation for camera handling (after Toolis App). By leveraging ARKit, AVFoundation, and WatchKit, I created a seamless travel photography app. Overcoming technical challenges and refining the app based on user feedback showed how Apple's frameworks can elevate everyday tasks. This project reinforced my belief that well-integrated technology can transform simple ideas into meaningful user experiences.</li>
+        </ul>
+      </div>
+
+    </div>
+
+  </div>
+</div><!-- End Portfolio Details -->
   </main><!-- End #main -->
 
   <div class="credits">
