add: details of find cimis house

--- a/pfdetail-findcimishose.html
+++ b/pfdetail-findcimishose.html
@@ -1,3 +1,10 @@
+
+
+
+
+
+<!--  -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -40,52 +47,77 @@
 
   <main id="main">
 
-    <!-- ======= Portfolio Details ======= -->
-    <div id="portfolio-details" class="portfolio-details">
-      <div class="container">
+<!-- ======= Portfolio Details ======= -->
+<div id="portfolio-details" class="portfolio-details">
+  <div class="container">
 
-        <div class="row">
+    <div class="row">
 
-          <div class="col-lg-8">
-            <h2 class="portfolio-title">Find Cimi's House: 2D Adventure Game!</h2>
+      <div class="col-lg-8">
+        <h2 class="portfolio-title">Find Cimi's House: 2D Adventure Game!</h2>
 
-            <div class="portfolio-details-slider swiper">
-              <div class="swiper-wrapper align-items-center">
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/pf-findcimishouse.png" alt="">
-                </div>
-
-              </div>
-              <div class="swiper-pagination"></div>
+        <!-- Gambar pertama (Sudah ada dalam slider) -->
+        <div class="portfolio-details-slider swiper">
+          <div class="swiper-wrapper align-items-center">
+            <div class="swiper-slide">
+              <img src="assets/img/portfolio/pf-findcimishouse0.png" alt="" style="margin-bottom: 20px;">
             </div>
-
           </div>
+          <!-- <div class="swiper-pagination"></div> -->
+        </div>
 
-          <div class="col-lg-4 portfolio-info">
-            <h3>Project information</h3>
-            <ul>
-              <li><strong>Platform</strong>: Unity and iOS</li>
-              <li><strong>Project date</strong>: September, 2024</li>
-              <li><strong>Project URL</strong>: <a href="#">-</a></li>
-            </ul>
+        <!-- Gambar kedua (pf-pixshoot1.png) ditambahkan di bawah gambar pertama -->
+        <div>
+          <img src="assets/img/portfolio/pf-findcimishouse1.png" alt="" style="margin-bottom: 20px;">
+        </div>
 
-    
-            <p>
-              Find Cimi’s House is a 2D adventure game for iOS where players control a cat named Cimi, who embarks on a quest to find its way home after being kidnapped. The game features multiple chapters and maps as players guide Cimi through different environments.
-              <p>
-              Story:
-              <br>
-              Oyen, a house cat, was playing in the backyard. When his owner went inside the house, a truck parked in the backyard. A figure in a black cloak and mask arrived carrying a sack and kidnapped Oyen, taking him into the truck. The truck that Oyen was in hit a speed bump, causing the cage lock to open slightly. Oyen escaped from the cage. When the truck stopped at a red light, Oyen jumped out and began his journey to find its house.
-
-            </p>
-
-            </div>
-
+        <!-- Gambar ketiga (pf-pixshoot2.png) ditambahkan di bawah gambar kedua -->
+        <div>
+          <img src="assets/img/portfolio/pf-findcimishouse2.png" alt="" style="margin-bottom: 20px;">
         </div>
 
       </div>
-    </div><!-- End Portfolio Details -->
+
+      <div class="col-lg-4 portfolio-info">
+        <h3>Project Information</h3>
+        <ul>
+          <li><strong>Platform</strong>: iOS</li>
+          <li><strong>Project Date</strong>: September, 2024</li>
+          <li><strong>Project URL</strong>:<a href="https://apps.apple.com/id/app/find-cimi-house/id6714479857"> App Store </a></li>
+        </ul>
+        <h4>Game Overview</h4>
+        <p>Find Cimi’s House is a 2D adventure game for iOS where players control a cat named Cimi, who embarks on a quest to find its way home after being kidnapped. The game features multiple chapters and maps as players guide Cimi through different environments.</p>
+
+        <h4>Game Story</h4>
+        <ul>
+          <li>Oyen, a house cat, was playing in the backyard. When his owner went inside the house, a truck parked in the backyard. A figure in a black cloak and mask arrived carrying a sack and kidnapped Oyen, taking him into the truck. The truck that Oyen was in hit a speed bump, causing the cage lock to open slightly. Oyen escaped from the cage. When the truck stopped at a red light, Oyen jumped out and began his journey to find its house.</li>
+        </ul>
+
+        <h4>My Role on This Project:</h4>
+        <h5>As Unity Developer:</h5>
+        <ul>
+          <li>- Developed core game mechanics, including the hidden UI system, where action buttons appear only when needed, increasing curiosity and immersing players in the environment.</li>
+          <li>- Collaborated with a team of 4 developers, ensuring all project goals were aligned and the system design was cohesive across all development phases.</li>
+          <li>- Implemented Cimi’s animations with rive and unity, ensuring her personality came through in every movement.</li>
+        </ul>
+
+        <h5>As Game Designer:</h5>
+        <ul>
+          <li>- Conceptualized and developed the core game mechanics, ensuring they aligned with the overall theme of curiosity and exploration.</li>
+          <li>- Created a video prototype to showcase the gameplay flow, allowing the team to visualize and refine the mechanics.</li>
+          <li>- Collaborated closely with mentors and team to discuss ideas, gather feedback, and make key design decisions, ensuring the gameplay experience was both engaging and intuitive with current resources and developers capabilities.</li>
+        </ul>
+
+        <h4>Reflections</h4>
+        <ul>
+          <li>Find Cimi’s House was my first game project, and it was a rewarding challenge. Creating a game full of curiosity, cuteness, and hidden elements taught me how subtle design choices can create an immersive experience that emotionally connects with players.</li>
+        </ul>
+      </div>
+
+    </div>
+
+  </div>
+</div><!-- End Portfolio Details -->
 
   </main><!-- End #main -->
 
@@ -107,3 +139,4 @@
 </body>
 
 </html>
+
