added ADA at IL Certificate

--- a/pfdetail-cognivy.html
+++ b/pfdetail-cognivy.html
@@ -41,53 +41,79 @@
   <main id="main">
 
     <!-- ======= Portfolio Details ======= -->
-    <div id="portfolio-details" class="portfolio-details">
-      <div class="container">
+<div id="portfolio-details" class="portfolio-details">
+  <div class="container">
 
-        <div class="row">
+    <div class="row">
 
-          <div class="col-lg-8">
-            <h2 class="portfolio-title">Cognivy : Alzheimer Dimenthia Theraphy</h2>
+      <div class="col-lg-8">
+        <h2 class="portfolio-title">Cognivy : Alzheimer Dimenthia Theraphy</h2>
 
-            <div class="portfolio-details-slider swiper">
-              <div class="swiper-wrapper align-items-center">
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/pf-cognify copy.png" alt="">
-                </div>
-
-              </div>
-              <div class="swiper-pagination"></div>
+        <!-- Gambar pertama (Sudah ada dalam slider) -->
+        <div class="portfolio-details-slider swiper">
+          <div class="swiper-wrapper align-items-center">
+            <div class="swiper-slide">
+              <img src="assets/img/portfolio/pf-cognivy1.png" alt="" style="margin-bottom: 20px;">
             </div>
-
           </div>
+          <!-- <div class="swiper-pagination"></div> -->
+        </div>
 
-          <div class="col-lg-4 portfolio-info">
-            <h3>Project information</h3>
-            <ul>
-              <li><strong>Platform</strong>: iOS</li>
-              <li><strong>Project date</strong>: Juli, 2024</li>
-              <li><strong>Project URL</strong>: <a href="https://apps.apple.com/id/app/cognify/id6648012294">-</a></li>
-            </ul>
+        <!-- Gambar kedua -->
+        <div>
+          <img src="assets/img/portfolio/pf-cognivy2.png" alt="" style="margin-bottom: 20px;">
+        </div>
 
-    
-            <p>
-              An AR app that help early-stage Alzheimer's patients with memory problem to do cognitive memory therapy by placing virtual items in specific locations with relevan context and reordering them after randomization.            </p>
-            <p>
-              Features:
-              <br>
-                 - AR Interaction : uses AR to place virtual items in real-world environments, providing an interactive experience for memory therapy, Patients perform cognitive exercises by reordering virtual objects, helping to stimulate memory recall and cognitive function, Objects are randomly shuffled, and patients are tasked with reordering them to their original locations, improving recall skills.
-                 - Theraphy Tracking Progress :  Tracks their progress over time each session, adapting to their abilities for better therapy outcomes.
-              </br>
-
-            </p>
-
-            </div>
-
+        <!-- Gambar ketiga -->
+        <div>
+          <img src="assets/img/portfolio/pf-cognivy3.png" alt="" style="margin-bottom: 20px;">
         </div>
 
       </div>
-    </div><!-- End Portfolio Details -->
+
+      <div class="col-lg-4 portfolio-info">
+        <h3>Project Information</h3>
+        <ul>
+          <li><strong>Platform</strong>: iOS</li>
+          <li><strong>Project Date</strong>: Juli, 2024</li>
+          <li><strong>Project URL</strong>:<a href="https://apps.apple.com/id/app/cognify/id6648012294"> App Store </a></li>
+        </ul>
+        <h4>Project Overview</h4>
+       <p>An AR app that help early-stage Alzheimer's patients with memory problem to do cognitive memory therapy by placing virtual items in specific locations with relevan context and reordering them after randomization.</p>
+
+        <h4>Features</h4>
+        <ul>
+          <li><strong>1. Alzheimer Theraphy :</strong>bla bla .</li>
+          <li><strong>2. Object Randomization :</strong>bla bla </li>
+          <li><strong>3. Theraphy Tracking:</strong>With history and duration detailsbla bla .</li>
+        </ul>
+
+        <h4>My Role on This Project:</h4>
+        <h5>As iOS Developer:</h5>
+        <ul>
+          <li>- bla bla </li>
+          <li>- bla bla </li>
+          <li>- bla bla </li>
+        </ul>
+
+        <h5>As Researcher:</h5>
+        <ul>
+          <li>- Designed and conducted user research by creating interview questions for travelers, performing user interviews, and analyzing results to develop user personas, customer journey maps, and actionable solution concepts.</li>
+          <li>- Performed feasibility studies of Apple’s native frameworks, evaluating their compatibility with Pixshoot’s features and identifying the most viable technologies for integration.</li>
+          <li>- Led 3 rounds of usability testing with over 25 participants, achieving a 9.5/10 satisfaction score, ensuring the final product met user needs and delivered an intuitive experience.</li>
+        </ul>
+
+        <h4>Reflections</h4>
+        <ul>
+          <li>Working on Cognivy was bla bla</li>
+        </ul>
+      </div>
+
+    </div>
+
+  </div>
+</div><!-- End Portfolio Details -->
+
 
   </main><!-- End #main -->
 
