adjust the portfolio section

--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
 
       <div class="section-title">
         <h2>About</h2>
-        <p></p>
       </div>
 
       <div class="row">
@@ -717,8 +716,8 @@
           </div>
         </div>
 
-        <!-- Untitled -->
-      <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+        <!-- Memulai Pemrograman Dengan Swift -->
+       <div class="col-lg-4 col-md-6 portfolio-item filter-web">
         <div class="portfolio-wrap">
           <img src="assets/img/certifications/swiftbasic.webp"
             class="img-thumbnail" alt="">
@@ -733,7 +732,7 @@
             </div>
           </div>
         </div>
-      </div>
+       </div>
 
 
       </div>
@@ -806,7 +805,7 @@
                 @IL</a></h5>
             <h6>February 2024 - Desember 2024</h6>
             <p><em>Tech Learner | Focusing on iOS App Development</em></p>
-            <p>Expected Graduation: December 2024</p>
+            <p>Graduation Status: Graduated</p>
           </div>
 
           <div class="col-md-4 mt-4 mt-md-0 icon-box bg-grey" data-aos="fade-up" data-aos-delay="200">
