--- a/pfdetail-cognivy.html
+++ b/pfdetail-cognivy.html
@@ -83,17 +83,17 @@
 
         <h4>Features</h4>
         <ul>
-          <li><strong>1. Alzheimer Theraphy :</strong>bla bla .</li>
-          <li><strong>2. Object Randomization :</strong>bla bla </li>
-          <li><strong>3. Theraphy Tracking:</strong>With history and duration detailsbla bla .</li>
+          <li><strong>1. Alzheimer Puzzle Theraphy :</strong>An interactive therapy that engages Alzheimer's patients in memory exercises by placing 3 virtual objects in meaningful, real-world contexts. The user must reorder the objects after they’ve been randomized, helping strengthen memory recall and cognitive function.</li>
+          <li><strong>2. Object Randomization :</strong>The app randomizes the placement of virtual objects within the physical environment, challenging users to recall and reorder them, enhancing memory retention and cognitive function. </li>
+          <li><strong>3. Theraphy Tracking:</strong> the user’s progress with detailed history, time spent on one theraphy session. This helps caregiver monitor progress and adjust therapy based on the user’s needs.</li>
         </ul>
 
         <h4>My Role on This Project:</h4>
         <h5>As iOS Developer:</h5>
         <ul>
-          <li>- bla bla </li>
-          <li>- bla bla </li>
-          <li>- bla bla </li>
+          <li>- Developed AR session features on iPad Pro using LiDAR, enabling object placement and replacement in the AR view for enhanced user interaction. </li>
+          <li>- Developed storage features with overlays to enable object pickup and placement from ARKit anchors, enhancing interactivity and user experience. </li>
+          <li>- Collaborated closely with 2 developers to maintain clean code and ensure a clear system design using the MVVM design pattern under the guidance of Tech Mentors</li>
         </ul>
 
         <h5>As Researcher:</h5>
@@ -105,7 +105,7 @@
 
         <h4>Reflections</h4>
         <ul>
-          <li>Working on Cognivy was bla bla</li>
+          <li>Working on Cognivy was a transformative experience that not only allowed me to apply my technical skills in AR development but also deepened my empathy for the elderly. Leading many elderly participants through usability testing helped me better understand the challenges they face, especially those with Alzheimer's. This experience was incredibly rewarding, as I witnessed firsthand how technology could support both patients and caregivers in meaningful ways. It was also my first time working with ARKit and applying interactive features with overlays using LiDAR. I gained invaluable hands-on experience in creating immersive AR experiences that are both functional and intuitive. Additionally, I learned how to engage with expert caregivers in a professional setting, collaborating effectively to ensure the app’s design met both clinical and user needs. I’m proud to have contributed to a project with such a profound impact, one that truly makes a difference in people’s lives.a</li>
         </ul>
       </div>
 
