added cognivy details

--- a/pfdetail-cognivy.html
+++ b/pfdetail-cognivy.html
@@ -98,14 +98,14 @@
 
         <h5>As Researcher:</h5>
         <ul>
-          <li>- Designed and conducted user research by creating interview questions for travelers, performing user interviews, and analyzing results to develop user personas, customer journey maps, and actionable solution concepts.</li>
-          <li>- Performed feasibility studies of Apple’s native frameworks, evaluating their compatibility with Pixshoot’s features and identifying the most viable technologies for integration.</li>
-          <li>- Led 3 rounds of usability testing with over 25 participants, achieving a 9.5/10 satisfaction score, ensuring the final product met user needs and delivered an intuitive experience.</li>
+          <li>- Designed and conducted user research by creating interview questions for caregivers and patients, performing in-depth user interviews, and analyzing results to develop user personas, customer journey maps, and actionable solution concepts.</li>
+          <li>- Collaborated with neurologists and caregiving professionals to ensure the app met clinical needs and therapeutic goals, applying their feedback to refine the app’s functionality.</li>
+          <li>- Performed feasibility tech studies on Apple’s native and external frameworks, assessing their compatibility with the app’s features and identifying the most viable technologies for integration.</li>
         </ul>
 
         <h4>Reflections</h4>
         <ul>
-          <li>Working on Cognivy was a transformative experience that not only allowed me to apply my technical skills in AR development but also deepened my empathy for the elderly. Leading many elderly participants through usability testing helped me better understand the challenges they face, especially those with Alzheimer's. This experience was incredibly rewarding, as I witnessed firsthand how technology could support both patients and caregivers in meaningful ways. It was also my first time working with ARKit and applying interactive features with overlays using LiDAR. I gained invaluable hands-on experience in creating immersive AR experiences that are both functional and intuitive. Additionally, I learned how to engage with expert caregivers in a professional setting, collaborating effectively to ensure the app’s design met both clinical and user needs. I’m proud to have contributed to a project with such a profound impact, one that truly makes a difference in people’s lives.a</li>
+          <li>Working on Cognivy was a transformative experience that not only honed my AR development skills but also deepened my empathy for the elderly, particularly those with Alzheimer's. Leading usability testing with elderly participants gave me a firsthand understanding of their challenges, while showcasing how technology can significantly improve their lives. This project was my first experience with ARKit, LiDAR, and interactive overlays, and it provided invaluable hands-on experience in creating intuitive, immersive AR features. Additionally, I learned to collaborate with expert caregivers, ensuring the app met both clinical standards and user needs. I’m proud to have contributed to a project that makes a real, meaningful impact. </li>
         </ul>
       </div>
 
@@ -117,13 +117,6 @@
 
   </main><!-- End #main -->
 
-  <div class="credits">
-    <!-- All the links in the footer should remain intact. -->
-    <!-- You can delete the links only if you purchased the pro version. -->
-    <!-- Licensing information: https://bootstrapmade.com/license/ -->
-    <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
-    Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-  </div>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
