--- a/index.html
+++ b/index.html
@@ -585,20 +585,20 @@
           </div>
         </div>
 
-        <!-- EF SET -->
-        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+         <!-- Green Digital Certificate - INCO Academy -->
+         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="assets/img/certifications/Certificate of English Level from EF SET - C1 Proficient - Farid.webp"
+            <img
+              src="assets/img/certifications/certificate-incoacademy.jpg"
               class="img-thumbnail" alt="">
             <div class="portfolio-info">
-              <h3>EF SET English Certificate - C1</h3>
-
+              <h3>INCO Acacemy - Green Digital Certificate</h3>
               <div class="portfolio-links">
-                <a href="assets/img/certifications/Certificate of English Level from EF SET - C1 Proficient - Farid.webp"
+                <a href="assets/img/certifications/certificate-incoacademy.jpg"
                   data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-zoom-in"></i></a>
-                <a href="https://cert.efset.org/3FejRc" data-gallery="portfolioDetailsGallery"
-                  data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
-                    class="bx bx-link "></i></a>
+                <a href="https://drive.google.com/file/d/1Cfu6z5hBRu5j9dHefxz2nGBGMk98NZ-S/view?usp=sharing"
+                  data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
+                  class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link "></i></a>
               </div>
             </div>
           </div>
@@ -732,6 +732,25 @@
             </div>
           </div>
         </div>
+       </div>
+
+     <!-- EF SET -->
+       <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+                <div class="portfolio-wrap">
+                  <img src="assets/img/certifications/Certificate of English Level from EF SET - C1 Proficient - Farid.webp"
+                    class="img-thumbnail" alt="">
+                  <div class="portfolio-info">
+                    <h3>EF SET English Certificate - C1</h3>
+      
+                    <div class="portfolio-links">
+                      <a href="assets/img/certifications/Certificate of English Level from EF SET - C1 Proficient - Farid.webp"
+                        data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-zoom-in"></i></a>
+                      <a href="https://cert.efset.org/3FejRc" data-gallery="portfolioDetailsGallery"
+                        data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
+                          class="bx bx-link "></i></a>
+                    </div>
+                  </div>
+                </div>
        </div>
 
 
