adjust my name added Adam

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta content="width=device-width, initial-scffale=1.0" name="viewport">
 
-  <title>Farid Andika - Personal Website</title>
+  <title>Farid Andika (Adam) - Personal Website</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -55,8 +55,6 @@
 
       </nav><!-- .navbar -->
 
-
-
       <!--       
       <iframe width="560" height="315" src="https://www.youtube.com/embed/p80VyQ5wLvg?si=c7P7D5FwuAdVY9c8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       <i class="bi bi-list mobile-nav-toggle"></i> -->
@@ -86,9 +84,9 @@
           <img src="assets/img/me.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Farid Andika</h3>
+          <h3>Farid Andika 'Adam'</h3>
           <p>
-            Junior iOS Developer | Apple Developer Academy @IL 2024 🇮🇩
+            Software Engineer @ SBG | Apple Developer Academy @IL 2024 🇮🇩
           </p>
 
           <p>
@@ -104,7 +102,6 @@
             In 2023, I joined Bangkit Academy led by Google, where I specialized in Mobile Development with a focus on
             the Kotlin programming language. In 2024, I expanded my skills into the Apple ecosystem through the Apple
             Developer Academy @Infinite Learning, where I honed my expertise in the Swift programming language.
-            Now I am looking forward to joined the Tech Industry.
           </p>
         </div>
       </div>
