adjust my name in the first page

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
   <header id="header">
     <div class="container">
 
-      <h1><a href="index.html">Farid Andika</a></h1>
+      <h1><a href="index.html">Farid Andika 'Adam'</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a Junior <span>iOS Developer</span> living in Batam, Indonesia 🇮🇩.</h2>
+      <h2>I'm a <span>Software Engineer @ SBG</span> living in Batam, Indonesia 🇮🇩.</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
