--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
             <img src="assets/img/testimonials/pakfaisal.png" class="testimonial-img" alt="">
-            <h3>Associate Prof. Ir. Muhammad Faisal, S.SI.,M.T., Ph.D.,IPM </h3>
-            <h4>Researcher and Lecturer at STMIK Profesional Makassar</h4>
+            <h3> Prof. Ir. Muhammad Faisal, S.SI.,M.T., Ph.D.,IPM </h3>
+            <h4>Researcher and Lecturer at Universitas Muhammadiyah Makassar</h4>
           </div>
         </div><!-- End testimonial item -->
 
