--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scffale=1.0" name="viewport">
 
-  <title>Farid Andika (Adam) - Personal Website</title>
+  <title>Farid Andika - Personal Website</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -37,16 +37,16 @@
   <header id="header">
     <div class="container">
 
-      <h1><a href="index.html">Farid Andika 'Adam'</a></h1>
+      <h1><a href="index.html">Farid Andika</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a <span>Software Engineer @ SBG</span> living in Batam, Indonesia 🇮🇩.</h2>
+      <h2>I'm a <span>Software Engineer @ OneByOne</span> living in Bali, Indonesia 🇮🇩.</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link active" href="#header">Home</a></li>
           <li><a class="nav-link" href="#about">About</a></li>
-          <li><a href="forms/assets/Resume-Farid.pdf" target="_blank"> <span>Resume</span></a></li>
+          <li><a href="forms/assets/9:25Resume - Farid Andika.pdf" target="_blank"> <span>Resume</span></a></li>
           <li><a class="nav-link" href="#education">Education</a></li>
           <li><a class="nav-link" href="#services">Certifications</a></li>
           <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
@@ -89,25 +89,24 @@
           <img src="assets/img/me.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Farid Andika 'Adam'</h3>
+          <h3>Farid Andika</h3>
           <p>
-            Software Engineer @ SBG | Apple Developer Academy @IL 2024 🇮🇩
+            Software Engineer @ OneByOne | Apple Developer Academy @IL 2024 🇮🇩
           </p>
 
           <p>
-            I began my journey in technology by majoring in Optical Fiber Engineering at SMK Telkom Makassar, supported
-            by a full scholarship from Yayasan Pendidikan Telkom. I continued my studies at Telkom University, focusing
-            on Diploma of Telecommunication Technology. I was an active student both academically and in various
-            organizations. However, due to changes in scholarship policies during the COVID-19 pandemic and financial
-            difficulties, I had to pause my studies. After a year and a half, I resumed my education at STMIK
-            Profesional Makassar, where I discovered my passion for Object-Oriented Programming and software
-            engineering.
+          My journey into technology began with a background in telecommunications, where I studied Optical Fiber Engineering at SMK Telkom Makassar and later continued at Telkom University. Although the pandemic forced me to pause my studies for a while, it also became a turning point — when I resumed at STMIK Profesional Makassar, I found my real passion in software engineering and object-oriented programming.
           </p>
+
           <p>
-            In 2023, I joined Bangkit Academy led by Google, where I specialized in Mobile Development with a focus on
-            the Kotlin programming language. In 2024, I expanded my skills into the Apple ecosystem through the Apple
-            Developer Academy @Infinite Learning, where I honed my expertise in the Swift programming language.
+          In 2023, I joined Bangkit Academy led by Google, GoTo, and Traveloka, focusing on Android development with Kotlin. The following year, I had the opportunity to expand into the Apple ecosystem through the Apple Developer Academy @Infinite Learning, where I built several iOS apps and a Unity game while deepening my skills in Swift, SwiftUI, and Apple frameworks.
           </p>
+
+          <p>
+          After graduating from the Academy, I stepped into the professional world as an iOS Developer at AO Plus Asia in Singapore, where I developed and published native iOS apps, including an expense tracker powered by SwiftUI, CloudKit, CoreData, Vision, and GPT-based OCR. Today, I’m working remotely as a Mobile Developer & Front-End Engineer at OneByOne Logistical Pty Ltd in Australia, contributing to projects that span across iOS, Flutter, and React. 
+          I enjoy building applications that are not only functional but also intuitive and delightful to use. For me, technology is a way to solve problems, create meaningful experiences, and connect with people around the world.
+          </p>
+        
         </div>
       </div>
 
@@ -328,6 +327,21 @@
               <img src="assets/img/testimonials/robert-theo.png" class="testimonial-img" alt="">
               <h3>Robert Theo</h3>
               <h4>Backend Engineer |  Apple Developer Academy @Binus Cohort 7 | Former GDSC Lead @Matana University | Bangkit Academy Graduate '22</h4>
+            </div>
+          </div><!-- End testimonial item -->
+
+          <div class="swiper-slide">
+            <div class="testimonial-item">
+              <p>
+                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                Worked with Farid on a few iOS projects and really enjoyed the experience. He’s solid with Swift, knows his way around iOS architecture, and always delivers clean, reliable code.
+
+                Farid’s easy to work with, communicates well, and never shies away from solving tough problems. Definitely someone you’d want on your dev team.
+                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              </p>
+              <img src="assets/img/testimonials/rajesh.png" class="testimonial-img" alt="">
+              <h3>Rajesh Triadi Noftarizal</h3>
+              <h4>iOS Engineer @ Triv |  Apple Developer Academy @ IL </h4>
             </div>
           </div><!-- End testimonial item -->
 
@@ -1071,7 +1085,7 @@
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>Current Address</h3>
-            <p>Rusunawa BPJS Kabil, Batam, ID 90122</p>
+            <p>Bali, Indonesia</p>
           </div>
         </div>
 
@@ -1100,7 +1114,7 @@
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
             <h3>WhatsApp</h3>
-            <p>+62 821 5444 2023</p>
+            <p>-</p>
           </div>
         </div>
       </div>
